# python-heatclient

./: .coveragerc  .gitignore  .gitreview  .pre-commit-config.yaml  .stestr.conf  .testr.conf  .zuul.yaml  CONTRIBUTING.rst  MANIFEST.in  README.md  README.rst  lower-constraints.txt  openstack-common.conf  requirements.txt  run_tests.sh  setup.cfg  setup.py  test-requirements.txt  tox.ini
doc/: Makefile  requirements.txt
doc/source/: conf.py  index.rst
doc/source/cli/: index.rst  orchestration.rst  software_config.rst  software_deployment.rst  stack.rst
doc/source/contributor/: contributing.rst
doc/source/ext/: gen_ref.py
doc/source/man/: heat.rst
heatclient/: __init__.py  _i18n.py  client.py  exc.py  shell.py  version.py  versioninfo
heatclient/common/: base.py  deployment_utils.py  environment_format.py  event_utils.py  format_utils.py  hook_utils.py  http.py  resource_formatter.py  template_format.py  template_utils.py  utils.py
heatclient/locale/zh_CN/LC_MESSAGES/: heatclient-log-error.po  heatclient-log-info.po  heatclient-log-warning.po
heatclient/openstack/common/: _i18n.py  cliutils.py  gettextutils.py  importutils.py  jsonutils.py  strutils.py  version.py
heatclient/openstack/common/apiclient/: auth.py  base.py  client.py  exceptions.py  fake_client.py  utils.py
heatclient/osc/: plugin.py
heatclient/osc/v1/: build_info.py  common.py  event.py  resource.py  resource_type.py  resources.py  service.py  snapshot.py  software_config.py  software_deployment.py  stack.py  stack_failures.py  template.py
heatclient/tests/: fakes.py  inline_templates.py  keystone_client_fixtures.py  test_actions.py  test_build_info.py  test_common_http.py  test_deployment_utils.py  test_environment_format.py  test_event_utils.py  test_events.py  test_resource_types.py  test_resources.py  test_shell.py  test_software_configs.py  test_software_deployments.py  test_stacks.py  test_template_format.py  test_template_utils.py  test_utils.py
heatclient/tests/functional/: base.py  config.py  test_readonly_heat.py
heatclient/tests/functional/hooks/: post_test_hook.sh
heatclient/tests/functional/osc/v1/: base.py  test_readonly.py  test_stack.py
heatclient/tests/functional/templates/: heat_minimal.yaml  heat_minimal_hot.yaml
heatclient/tests/test_templates/: adopt.json  adopt_with_file.json  empty.yaml  parameters.yaml
heatclient/tests/unit/: fakes.py  test_actions.py  test_build_info.py  test_common_http.py  test_deployment_utils.py  test_environment_format.py  test_event_utils.py  test_events.py  test_format_utils.py  test_openstack_common.py  test_resource_formatter.py  test_resource_types.py  test_resources.py  test_service.py  test_shell.py  test_software_configs.py  test_software_deployments.py  test_stacks.py  test_template_format.py  test_template_utils.py  test_template_versions.py  test_utils.py
heatclient/tests/unit/osc/: fakes.py  utils.py
heatclient/tests/unit/osc/v1/: fakes.py  test_build_info.py  test_event.py  test_resource.py  test_resource_type.py  test_resources.py  test_service.py  test_snapshot.py  test_software_config.py  test_software_deployment.py  test_sotware_config.py  test_stack.py  test_stack_failures.py  test_template.py
heatclient/tests/unit/v1/: test_hooks.py
heatclient/tests/unit/var/: adopt_stack_data.json  dot_test.json  environment.json
heatclient/tests/v1/: test_hooks.py
heatclient/tests/var/: minimal.template
heatclient/v1/: __init__.py  actions.py  build_info.py  client.py  events.py  resource_types.py  resources.py  services.py  shell.py  software_configs.py  software_deployments.py  stacks.py  template_versions.py
playbooks/devstack/: functional-run.yaml
releasenotes/notes/: add-converge-in-osc-stack-update-10f256589f628d13.yaml  add-files-container-stack-create-update-324b931f8f474b3d.yaml  bug-1643492-2d7537b55f347722.yaml  drop-python-2-7-73d3113c69d724d6.yaml  osc-stack-list-filter-project-cefce0d0a4d4467b.yaml  remove-stack-update-enable-rollback-d83bbdd6f7175b89.yaml
releasenotes/source/: conf.py  index.rst
releasenotes/source/locale/en_GB/LC_MESSAGES/: releasenotes.po
tests/: fakes.py  test_common_http.py  test_foo.py  test_shell.py  test_utils.py
tests/v1/: test_shell.py
tools/: heat.bash_completion  pip-requires  test-requires  tox_install.sh
