[metadata]
name = python-heatclient
summary = OpenStack Orchestration API Client Library
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    heatclient

[entry_points]
console_scripts =
    heat = heatclient.shell:main

openstack.cli.extension =
    orchestration = heatclient.osc.plugin

openstack.orchestration.v1 =
    stack_show = heatclient.osc.v1.stack:ShowStack
    stack_list = heatclient.osc.v1.stack:ListStack
    stack_create = heatclient.osc.v1.stack:CreateStack
    stack_update = heatclient.osc.v1.stack:UpdateStack


[global]
setup-hooks =
    pbr.hooks.setup_hook

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[wheel]
universal = 1

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = python-heatclient/locale/python-heatclient.pot

[compile_catalog]
directory = python-heatclient/locale
domain = python-heatclient

[update_catalog]
domain = python-heatclient
output_dir = python-heatclient/locale
input_file = python-heatclient/locale/python-heatclient.pot
