[metadata]
name = python-heatclient
summary = OpenStack Orchestration API Client Library
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    heatclient

[entry_points]
console_scripts =
    heat = heatclient.shell:main

openstack.cli.extension =
    orchestration = heatclient.osc.plugin

openstack.orchestration.v1 =
    orchestration_template_function_list = heatclient.osc.v1.template:FunctionList
    orchestration_template_version_list = heatclient.osc.v1.template:VersionList
    orchestration_resource_type_list = heatclient.osc.v1.resource_type:ResourceTypeList
    orchestration_resource_type_show = heatclient.osc.v1.resource_type:ResourceTypeShow
    software_config_create = heatclient.osc.v1.software_config:CreateConfig
    software_config_delete = heatclient.osc.v1.software_config:DeleteConfig
    software_config_list = heatclient.osc.v1.software_config:ListConfig
    software_config_show = heatclient.osc.v1.software_config:ShowConfig
    software_deployment_create = heatclient.osc.v1.software_deployment:CreateDeployment
    software_deployment_delete = heatclient.osc.v1.software_deployment:DeleteDeployment
    software_deployment_list = heatclient.osc.v1.software_deployment:ListDeployment
    software_deployment_show = heatclient.osc.v1.software_deployment:ShowDeployment
    stack_abandon = heatclient.osc.v1.stack:AbandonStack
    stack_adopt = heatclient.osc.v1.stack:AdoptStack
    stack_check = heatclient.osc.v1.stack:CheckStack
    stack_create = heatclient.osc.v1.stack:CreateStack
    stack_delete = heatclient.osc.v1.stack:DeleteStack
    stack_event_list = heatclient.osc.v1.event:ListEvent
    stack_event_show = heatclient.osc.v1.event:ShowEvent
    stack_list = heatclient.osc.v1.stack:ListStack
    stack_output_list = heatclient.osc.v1.stack:OutputListStack
    stack_output_show = heatclient.osc.v1.stack:OutputShowStack
    stack_resource_list = heatclient.osc.v1.resources:ResourceList
    stack_resource_metadata = heatclient.osc.v1.resources:ResourceMetadata
    stack_resource_show = heatclient.osc.v1.resources:ResourceShow
    stack_resource_signal = heatclient.osc.v1.resources:ResourceSignal
    stack_resume = heatclient.osc.v1.stack:ResumeStack
    stack_show = heatclient.osc.v1.stack:ShowStack
    stack_snapshot_create = heatclient.osc.v1.snapshot:CreateSnapshot
    stack_snapshot_delete = heatclient.osc.v1.snapshot:DeleteSnapshot
    stack_snapshot_list = heatclient.osc.v1.snapshot:ListSnapshot
    stack_snapshot_restore = heatclient.osc.v1.snapshot:RestoreSnapshot
    stack_snapshot_show = heatclient.osc.v1.snapshot:ShowSnapshot
    stack_suspend = heatclient.osc.v1.stack:SuspendStack
    stack_template_show = heatclient.osc.v1.stack:TemplateShowStack
    stack_update = heatclient.osc.v1.stack:UpdateStack
    stack_update_cancel = heatclient.osc.v1.stack:UpdateCancelStack

[global]
setup-hooks =
    pbr.hooks.setup_hook

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[wheel]
universal = 1

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = heatclient/locale/heatclient.pot

[compile_catalog]
directory = heatclient/locale
domain = heatclient

[update_catalog]
domain = heatclient
output_dir = heatclient/locale
input_file = heatclient/locale/heatclient.pot
